# cli-password-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
cli-password-manager/: cli_interface.py  encryption.py  functions.py  main.py  password_generator.py  passwords.json
cli_password_manager/: cli.py  cli_interface.py  encryption.py  functions.py
